--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "font-awesome": "^4.7.0",
     "vue": "^2.5.17",
     "vue-draggable-resizable": "^2.1.0",
+    "vue-router": "^3.1.6",
     "vuedraggable": "^2.23.1"
   },
   "devDependencies": {
