--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue": "^2.5.17",
     "vue-draggable-resizable": "^2.1.0",
     "vue-router": "^3.1.6",
-    "vuedraggable": "^2.23.1"
+    "vuedraggable": "^2.23.1",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0",
